--- a/WT-Library/pom.xml
+++ b/WT-Library/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.mefisto</groupId>
     <artifactId>WT-Library</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -18,7 +18,24 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
